# bisque

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  RELEASING.md  build.sh  package-lock.json  partitions.csv  renovate.json  sdkconfig.defaults  sdkconfig.defaults.debug
.agents/skills/build-firmware/: SKILL.md
.agents/skills/build-webui/: SKILL.md
.claude/hooks/: install-esp-idf.sh  install-kicad.sh  session-start.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: dependabot.yml  release-body.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  pages.yml  release.yml
components/app_config/include/: app_config.h
components/cone_table/: CMakeLists.txt  cone_table.c
components/cone_table/include/: cone_table.h
components/display/: CMakeLists.txt  dashboard.c  display.c  display_init.c  display_task.c  idf_component.yml  modal.c  modal_action_menu.c  modal_profile_picker.c  splash.c  ui_common.h  ui_screen_chart.c  ui_screen_firing.c  ui_screen_home.c  ui_screen_profiles.c  ui_theme.c  ui_theme.h  ui_widgets.c  ui_widgets.h
components/display/assets/: flame_icon.c
components/display/include/: boot_status.h  dashboard.h  display.h  modal.h  modal_action_menu.h  modal_profile_picker.h  splash.h  ui_screen_chart.h  ui_screen_firing.h  ui_screen_home.h  ui_screen_profiles.h
components/firing_engine/: CMakeLists.txt  firing_engine.c  firing_helpers.c
components/firing_engine/include/: firing_engine.h  firing_engine_internal.h  firing_types.h
components/history/: CMakeLists.txt  firing_history.c
components/history/include/: firing_history.h
components/ota/: CMakeLists.txt  Kconfig  ota_confirm.c  ota_manager.c
components/ota/include/: ota_manager.h
components/pid_control/: CMakeLists.txt  pid_control.c
components/pid_control/include/: pid_control.h
components/safety/: CMakeLists.txt  safety.c
components/safety/include/: safety.h
components/status_led/: CMakeLists.txt  status_led.c
components/status_led/include/: status_led.h
components/thermocouple/: CMakeLists.txt  thermocouple.c
components/thermocouple/include/: thermocouple.h
components/web_server/: CMakeLists.txt  api_handlers.c  api_json.c  notification_task.c  web_server.c  ws_handler.c
components/web_server/include/: api_json.h  web_server.h
components/wifi_manager/: wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
docs/: bench-smoke-test.md  cloud-dev.md  devcontainer.md  heat-treating-extension-plan.md  smoke-test-profile.json
docs/superpowers/plans/: 2026-03-27-static-analysis-ci.md  2026-07-22-devcontainer-kicad10.md
docs/superpowers/specs/: 2026-03-23-ios-app-design.md  2026-03-31-makefile-build-system-design.md  2026-04-01-github-readme-redesign.md  2026-07-22-devcontainer-kicad10-design.md
hardware/kicad/: .gitignore  README.md  bisque-controller-drc.rpt  bisque-controller.kicad_pcb  bisque-controller.kicad_prl  bisque-controller.kicad_pro  bisque-controller.kicad_sch
hardware/kicad/generator/: .gitignore  check_netlist.py  check_pcb.py  design.py  fetch-symbols.sh  fetch-three.sh  gen_jlc.py  gen_pcb.py  gen_sch.py  inspect_libs.py  kicad_build.py  render-3d.sh  render_3d.py  render_pcb.py  router.py  sexp.py
hardware/kicad/gerbers/: bisque-controller-B_Cu.gbl  bisque-controller-B_Mask.gbs  bisque-controller-B_Paste.gbp  bisque-controller-B_Silkscreen.gbo  bisque-controller-Edge_Cuts.gm1  bisque-controller-F_Cu.gtl  bisque-controller-F_Mask.gts  bisque-controller-F_Paste.gtp  bisque-controller-F_Silkscreen.gto  bisque-controller-drl_map.gbr  bisque-controller-job.gbrjob  bisque-controller.drl
hardware/kicad/jlcpcb/: BOM.csv  CPL.csv
ios/Bisque/: project.yml
ios/Bisque/Bisque/: BisqueApp.swift  ContentView.swift
ios/Bisque/Bisque.xcodeproj/: project.pbxproj
ios/Bisque/Bisque/LiveActivity/: FiringActivityAttributes.swift  FiringActivityManager.swift
ios/Bisque/Bisque/Models/: AutotuneStatus.swift  ConeEntry.swift  DiagThermocouple.swift  FiringProfile.swift  FiringProgress.swift  FiringSegment.swift  FiringStatus.swift  HistoryRecord.swift  KilnSettings.swift  StatusResponse.swift  SystemInfo.swift  TemperatureDataPoint.swift  WebSocketMessage.swift
ios/Bisque/Bisque/Networking/: APIError.swift  KilnAPIClient.swift  KilnWebSocketManager.swift
ios/Bisque/Bisque/Notifications/: NotificationManager.swift
ios/Bisque/Bisque/Preview Content/: PreviewData.swift
ios/Bisque/BisqueLiveActivity/: BisqueLiveActivity.swift  BisqueLiveActivityBundle.swift  FiringLockScreenView.swift  Info.plist
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/include/: app_config.h
scripts/: check-firmware-size.sh  check-spiffs-size.sh  format.sh  gen_flame_icon.py  idf-env.sh  install-hooks.sh  lint.sh  version.sh
simulator/: CMakeLists.txt  esp_app_desc.h  esp_err.h  esp_log.h  lv_conf.h  main.c  mock_esp.c  mock_esp.h
simulator/driver/: spi_master.h
simulator/freertos/: FreeRTOS.h  portmacro.h  queue.h  semphr.h
tests/host/: CMakeLists.txt  plant.c  plant.h  scenario_helpers.c  scenario_helpers.h  test_api_json.c  test_cone_table.c  test_firing_helpers.c  test_firing_scenarios.c  test_pid.c
tests/host/stubs/: esp_err.h  esp_log.h  esp_timer.c  esp_timer.h  freertos_stub.c  history_host.c  history_host.h  nvs.c  nvs.h  nvs_flash.h  ota_host.c  safety_host.c  safety_host.h  thermocouple_host.c  thermocouple_host.h
tests/host/stubs/driver/: spi_master.h
tests/host/stubs/freertos/: FreeRTOS.h  event_groups.h  queue.h  semphr.h  task.h
web_ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts
web_ui/mock-server/: handlers.test.ts  handlers.ts  physics.ts  plugin.ts  router.test.ts  router.ts  simulator.ts  standalone.ts  state.ts
web_ui/src/: main.tsx
web_ui/src/app/: App.tsx
web_ui/src/app/schemas/: kiln.ts  (+1 more)
web_ui/test/contracts/: firmwareContract.test.ts  responseSchemas.ts  smokeProfile.test.ts
(+74 files in other folders)
